# lumirum

./: .envrc  .gitignore  Cargo.toml  README.md  compose.yml  rustfmt.toml
.helix/: languages.toml
iot/: .gitignore  diagram.json  platformio.ini  wokwi.toml
iot/src/: config.h  main.cpp
server/: Cargo.toml
server/.sqlx/: query-03e0e1606773fcefcf325ed73225f637eb29599a4555170aa2475153e7f8043a.json  query-062ebbd1d190c36f57457f4a3157e9767dadd88d7304fa5488caeb5a9118272f.json  query-069af7fcfb00b24f7a94de11df9ea0d3426580290fd1c443477363a9934da2e6.json  query-0f55a412ae8efb36378b31343dab67b573882fcd9f518f14ed7bcdf8f0a90565.json  query-132fb91cac16dedccc120d8456a2e2227bf3fdc1cecbec71293359276854f0af.json  query-17e0dc6785d40b42363ae0d5923b4397561066548b2a1d9de9a84cafbf28c2a9.json  query-20335812d03da584a306760092cf0edb2eb9e397e6217bcc05c03a17d17097f7.json  query-261b37373e22877be427250f23e1011f98e1dc4c6002bbf0b95bed3c8590aecd.json  query-277ab9401a9e03d604009f7a8d330c4d2a1b30601feb29930a7b1a4562bf09c0.json  query-3370a7d49ca008d32119860982856694c94c70c734ee126ea17b85d1a662c5a3.json  query-3425fd890c626c544afc0affebbbfbf3f652f47e5ec52d171ad7210a30e7af5a.json  query-351314111d6a655488e42d836ad20e2a43dcee70081649303dc77cec4a429c6b.json  query-39a9c64a5bd7793dfb3e74a46dffa22798e57613f9ff4b2d89538ee0abe69f55.json  query-3ad0433fc105dfbbcad7dcc7b8ad14835a707a192ab182286a04c19bcef33140.json  query-442fa00df9713ea079d4eb45f68c66b70e693324ec12bca6a9900e8c39120096.json  query-4557320acf1e8ca800ea329033ae66dd333f609c581feae7dca6497e44332dbc.json  query-468771a72e46dc717eba2363b87afa5203b841b8d8cd862bfcc8bc8339ccb424.json  query-499a8dcb6e66189355a066ca9ad5a2e714bbea4838f30e7c7c58ca4710132b62.json  query-4b4782da51eade6ac6f65ec40d4ef3e5f2e5062b4a1583c018c48100582fec58.json  query-51af96c4df3e27256fb6b3911a39890e0ce3eabcd9c82cb69e127d2ed1ea8861.json  query-564765b3a1f7fcd279c49778a02a7f14b0902b970e61898011e5d57ef7d937f0.json  query-5c82e29759515c00ae15d41d256866d662f4df527605810b54267ba25e6a5c88.json  query-5d4375a8fdb31ec456e426ac5582a74ba4066d5b23c516534e3b1b6b226a578d.json  query-6dd98c6ecb5a0b7f139f5191398bdb33322d46d1c36b0626fe3b65d2dd0e5ece.json  query-6e99177ac80329cdb84fb3d305bdd3bef4b399a5fe621dba054918f096fe1c64.json  query-74331e24fdbd69a57a3f1001e34d4eeadb3549592fd75b656ff3d2b99f6618ca.json  query-7497bdeb1e103b4492d8e2e72643ab144ccecca38221fe30887719cb74920499.json  query-7978a05e17700d7579a63aa676dc20cde5248908a20e3ddc96d37ce2083bbca4.json  query-8e3c684c6a58b2bb1a57349e81b72a0b9e705c82d1bc81b9320e03b706e52717.json  query-92cd6ff70f1c40fa181e726a0048a65a99b44005905aa01ee43da40234a30e89.json  query-92cee78d4f13bbd0103d8f0be48f5a205493c1bd22c2c037f4ad429f9eef9de9.json  query-93ce8f857cfbf7c8e6cd20382c2d056e522ebe6c95199d450d7333d320198c99.json  query-9571025275676ae9affb8a316077059a954249385cbbcbf338067ea98a923707.json  query-990c9f644bc8f229b1be87f7a6a5dd8fdc2935758561b94e62e661fd03cb92d8.json  query-9be297bd78bffc047f8d9ad14d8fe18f4849d9d238ea5b69c381cecea521287a.json  query-a8f2397d8d6b2c2ad756f0c5bafafed29ff3239bdb607fe9ce0f2bc78b9821d7.json  query-aff52a5edd7e62771770a8c59ce65eaa84f82eb1425d68d2f15e9cef26fda890.json  query-b1d68a6458a990965d68e2759ac3a827f41fe6cd1b7cd37bc1747bdbe775e2be.json  query-b922cfd35f349fa2e6262550bb08d9f31b1881322cfac889a87b0b60b2411afb.json  query-b9dcc7f0b438c141b3643fc1bc083c43ea8180fff3db7224bcd6d57631a3afef.json  (+13 more)
server/migrations/: 0_init.sql  20251215091909_user.sql
server/src/: database.rs  errors.rs  extractors.rs  main.rs  responses.rs  router.rs
server/src/endpoints/: mod.rs  system.rs
server/src/features/: circadian.rs
server/src/features/auth/: change_password.rs  db.rs  get_me.rs  jwt.rs  login.rs  mod.rs  register.rs  types.rs
server/src/features/auth/routes/: login.rs  me.rs  password.rs  register.rs
server/src/features/devices/: auth.rs  db.rs  mod.rs
server/src/features/profiles/: db.rs  mod.rs
server/src/features/system/: health.rs  mod.rs  stats.rs  users.rs
server/src/features/telemetry/: db.rs  mod.rs
