[package]
name = "lumirum-server"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

axum = { version = "0.8.7", features = ["macros", "http2"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
# TODO: https://docs.rs/utoipa-config/latest/utoipa_config/

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }

listenfd = "1.0"
