[package]
name = "lumirum-server"
version = "0.4.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

listenfd = "1.0"

axum = { version = "0.8", features = ["macros", "http2"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
# TODO: https://docs.rs/utoipa-config/latest/utoipa_config/
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

thiserror = "2.0"
garde = { version = "0.22", features = ["derive"] }
error_set = "0.9"
strum = { version = "0.27", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.9"
argon2 = { version = "0.5", features = ["std"] }

sunrise = "2.1"
chrono-tz = { version = "0.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

futures = "0.3"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }
